# cvxjs

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.circuit-demo.config.js  vite.demo.config.js
.github/workflows/: ci.yml
examples/: basic.ts  entropy.ts  lasso.ts  least-squares.ts  portfolio.ts  power.ts
examples/circuit-demo/: index.html
examples/demo/: index.html
scripts/: extract-simba-data.ts  verify-pack.sh
src/: error.ts  index.ts  problem.ts
src/atoms/: affine.ts  index.ts  nonlinear.ts
src/canon/: canonicalizer.ts  cone-constraint.ts  index.ts  lin-expr.ts  quad-expr.ts  stuffing.ts
src/constraints/: constraint.ts  index.ts
src/dcp/: curvature.ts  index.ts  sign.ts
src/expr/: constant.ts  evaluate.ts  expr-data.ts  expr-wrapper.ts  expr.ts  expression.ts  index.ts  shape.ts  variable.ts
src/solver/: clarabel.ts  highs.ts  index.ts  lp-format.ts  router.ts
src/sparse/: csc.ts  index.ts
tests/browser/: index.html
tests/integration/: circuit-placement.test.ts  highs.test.ts  solver.test.ts  wasm-direct.test.ts
wasm/: Cargo.toml  build.sh
wasm/examples/: test_solver.rs
wasm/pkg/bundler/: clarabel_wasm.d.ts  clarabel_wasm.js  clarabel_wasm_bg.js  clarabel_wasm_bg.wasm  package.json
wasm/pkg/nodejs/: clarabel_wasm.d.ts  clarabel_wasm.js  clarabel_wasm_bg.wasm  package.json
wasm/pkg/web/: clarabel_wasm.d.ts  clarabel_wasm.js  clarabel_wasm_bg.wasm  clarabel_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
(+10 files in other folders)
